# SmartImageAlbum

./: .dockerignore  LICENSE  README.md
deployment/: docker-compose.yml
deployments/: docker-compose.yml
docs/: architecture_documentation.md  tooling_justification.md
docs/sources/architecture/: architecture_diagram.mmd
docs/sources/use_cases/process_image/: sequence.mmd  sequence_diagram.mmd
docs/sources/use_cases/retrieve_image_data/: sequence.mmd
docs/sources/use_cases/retrieve_similar_images/: sequence.mmd
services/api_service/: pyproject.toml
services/api_service/src/app/: Dockerfile  config.py  db.py  dependencies.py  entrypoint.sh  main.py  pyproject.toml  utils.py
services/api_service/src/shared/: pyproject.toml
services/api_service/src/worker/: config.py  dependencies.py  executors.py  pyproject.toml
services/api_service/src/workers/: orchestrator.py
services/coordinator_service/: Dockerfile  pyproject.toml
services/coordinator_service/app/: dependencies.py  main.py
services/image_embedding_service/: pyproject.toml  test.py
services/image_embedding_service/routers/: embed.py
services/image_embedding_service/src/: dependencies.py  main.py
src/libraries/shared/: pyproject.toml
src/services/backend_service/: Dockerfile  entrypoint.sh  pyproject.toml  utils.py
src/services/backend_service/config/: db.py  logger.py
src/services/backend_service/dependencies/: db.py  logging.py  vector_db.py
src/services/backend_service/schemas/: images.py
src/services/backend_service/src/: db.py  main.py  utils.py
src/services/backend_service/src/alembic/: env.py
src/services/backend_service/src/config/: app.py  logger.py  object_store.py  vector_db.py
src/services/backend_service/src/dependencies/: celery.py  db.py  logging.py  object_store.py  vector_db.py
src/services/backend_service/src/routers/: images.py  service_management.py
src/services/backend_worker_service/: Dockerfile  app.py  pyproject.toml  tasks.py
src/services/image_embedding_service/: Dockerfile  pyproject.toml
src/services/image_embedding_service/src/: main.py  state.py  utils.py
src/services/image_embedding_service/src/ai/: model_management.py
src/services/image_embedding_service/src/config/: app.py  embedding.py
src/services/image_embedding_service/src/routers/: embed.py  service_management.py
src/services/image_embedding_service/src/schemas/: embed.py  service_management.py
(+46 files in other folders)
