[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "minio",
    "pydantic-settings",
    "sqlalchemy",
    "python-multipart",
    "uvicorn",
    "python-dotenv",
    "asyncpg",
    "qdrant-client",
    "celery",
    "redis"
]
