[project]
name = "image-embedding-service"
version = "0.1.0"
description = "Transforms images into embeddings using Hugging Face vision models"
authors = [
    { name = "Tamas Szombathy", email = "szombathy.tamasgergely@gmail.com" }
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "transformers[torch]",
    "torch==2.6.0+cpu",
    "Pillow",
    "python-multipart",
    "aiohttp>=3.12.14",
    "pydantic-settings>=2.1.0",
]

requires-python = ">=3.11.0"

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]