[project]
name = "image-embedding-service"
version = "0.1.0"
description = "Transforms images into embeddings using Hugging Face vision models"
authors = [
    { name = "Tamas Szombathy", email = "szombathy.tamasgergely@gmail.com" }
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "transformers",
    "torch==2.6.0+cpu",
    "Pillow",
    "numpy",
    "pydantic-settings",
    "aiohttp",
]


requires-python = ">=3.11.0"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true